@@ -19,6 +19,9 @@ jobs:
           - name: release
             cntr: rcpp/ci
             r: R
+          - name: r-4.1
+            cntr: rcpp/ci-4.1
+            r: R
           - name: r-4.0
             cntr: rcpp/ci-4.0
             r: R
